--- a/frontend/src/styles/topMenuBar.css
+++ b/frontend/src/styles/topMenuBar.css
@@ -1,13 +1,44 @@
+.TopMenuBarBox {
+    width: inherit;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 1vh;
+    padding-top: 1vh;
+    background: rgb(238, 238, 238);
+}
+
 .TopMenuBar{
-    height: 10vh;
+    height: calc(100%);
+    width: 75vw;
+    background: rgb(255, 255, 255);
+    border-radius: 5px;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0 0 10px #ccc;
+    justify-content: center;
+    display: flex;
 }
 
 .TopBarContent {
     height: 7vh;
 }
 
+.TopBarDefaultContent {
+    height: 0;
+    visibility: hidden;
+    width: inherit;
+}
+
+.TopBarExpandedContent {
+    visibility: visible;
+    height: 15vh;
+    width: inherit;
+    background: inherit;
+}
+
 .TopBarDropDownSelection {
     height: 3vh;
+    width: inherit;
     display: flex;
     align-content: center;
 }
@@ -15,7 +46,6 @@
 .TopBarDropDownButton {
     align-content: center;
     display: flex;
-    width: 100vh;
     height: 2vh;
 }
 .DropDownIcon {
