--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -7,20 +7,19 @@
   justify-content: left;
   text-align: center;
   overflow: scroll;
+  display: flex;
   height: 100vh;
   width: 100vw;
-  align-items: flex-start;
-  display: flex;
 }
 .MenuBar {
   background: bisque;
   height: inherit;
-  max-width: 18vw;
+  max-width: 30vw;
 }
 
 .Contents{
-  background: rgb(238,238,238);
-  max-width: 90vw;
+  align-content: center;
+  width: 90vw;
   height: inherit;
 }
 
@@ -29,15 +28,8 @@
 }
 
 .TopMenuBarBox {
-  background: beige;
   max-width: inherit;
-  /*@apply col-start-1 row-start-1 row-span-1;*/
 }
 
-.SideMenuBarBox{
-  height: 100vh;
-  max-width: 50vw;
-  background: aquamarine;
-}
 
 
