made message content scrollable in button

--- a/frontend/src/styles/message.css
+++ b/frontend/src/styles/message.css
@@ -11,6 +11,11 @@
     text-align: left;
     color: #838787;
     margin-top: 10px;
+    overflow: auto;
+}
+
+.MessageButton::-webkit-scrollbar {
+    display: none;
 }
 
 .MessageButton:hover {
