multiple messages can now be presented

--- a/frontend/src/styles/sideMenuBar.css
+++ b/frontend/src/styles/sideMenuBar.css
@@ -16,7 +16,8 @@
 .SideBarIconExpandedContent {
     visibility: visible;
     width: 25vw;
-    display: flex;
+    display: inline-block;
+    align-items: center;
     justify-content: center;
 }
 
