can now scroll sidebar content if it gets full

--- a/frontend/src/styles/sideMenuBar.css
+++ b/frontend/src/styles/sideMenuBar.css
@@ -19,6 +19,11 @@
     display: inline-block;
     align-items: center;
     justify-content: center;
+    overflow: auto;
+}
+
+.SideBarIconExpandedContent::-webkit-scrollbar {
+    display: none;
 }
 
 .NoExpansion{
