added star - doesnt switch to filled when clicked

--- a/frontend/src/styles/message.css
+++ b/frontend/src/styles/message.css
@@ -1,6 +1,6 @@
 
 .MessageButton {
-    border: 1px solid #73a5e2;
+    border: 1px solid #a2a4a6;
     border-radius: 20px;
     width: 23vw;
     height: 10vw;
