--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -22,12 +22,16 @@
 }
 
 .Contents{
-  overflow: scroll;
+  overflow: auto;
   align-content: center;
   width: 90vw;
   max-height: inherit;
   margin-left: 50px;
   margin-right: 50px;
+}
+
+.Contents::-webkit-scrollbar{
+  display: none;
 }
 
 .bar {
