--- a/frontend/src/styles/sideMenuBar.css
+++ b/frontend/src/styles/sideMenuBar.css
@@ -4,6 +4,7 @@
     justify-content: left;
     width: inherit;
     background: rgb(255,255,255);
+    box-shadow: 0 0 10px #ccc;
 }
 
 .SideMenuBarAlwaysEnabled {
