--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -48,6 +48,12 @@
   overflow: auto;
 }
 
-
+.Popup {
+  position: absolute;
+  height: 100%;
+  width: 95%;
+  display: -webkit-box;
+  margin-left: auto;
+}
 
 
