--- a/frontend/src/styles/table.css
+++ b/frontend/src/styles/table.css
@@ -24,3 +24,16 @@ TableHead {
 .TableBody {
     width: inherit;
 }
+
+.Profile {
+    height: 40px;
+    width: 40px;
+    background-color: #3134e4;
+    border-radius: 50%;
+}
+
+.Profile h2 {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 500;
+}
