--- a/frontend/src/styles/table.css
+++ b/frontend/src/styles/table.css
@@ -28,7 +28,7 @@ TableHead {
 .Profile {
     height: 40px;
     width: 40px;
-    background-color: #3134e4;
+    background-color: #838dea;
     border-radius: 50%;
 }
 
