searchbar done - waiting for endpoint for hook

--- a/frontend/src/styles/searchbar.css
+++ b/frontend/src/styles/searchbar.css
@@ -1,11 +1,10 @@
 .SearchBar {
     position: absolute;
-    margin-top: 0.55vw;
-    margin-left: 0.5vw;
 }
 
-.SearchIcon {
-    
+.SearchForm {
+    margin-top: 0.55vw;
+    margin-left: 0.5vw;
 }
 
 .Location {
