--- a/frontend/src/styles/topMenuBar.css
+++ b/frontend/src/styles/topMenuBar.css
@@ -32,6 +32,14 @@
     background: inherit;
 }
 
+.TopMenuBarExpandedContent{
+    width: calc(100%);
+    background: rgb(255, 255, 255);
+    border-radius: 5px;
+    box-shadow: 0 0 10px #ccc;
+    height: 15vw;
+}
+
 .TopBarDropDownSelection {
     height: 3vh;
     width: inherit;
