--- a/frontend/src/styles/filter.css
+++ b/frontend/src/styles/filter.css
@@ -26,7 +26,7 @@
     text-align: left;
     margin-left: 1.1vw;
     font-family: Arial, Helvetica, sans-serif;
-    color: rgb(56, 56, 56);
+    color: #212121;
 }
 
 .item-chosen {
@@ -54,3 +54,5 @@
     color: white;
     font-weight: bold;
 }
+
+
