--- a/frontend/src/styles/message.css
+++ b/frontend/src/styles/message.css
@@ -1,8 +1,9 @@
 
 .MessageButton {
+    z-index: 2;
     border: 1px solid #a2a4a6;
     border-radius: 20px;
-    width: 23vw;
+    width: 22.9vw;
     height: 10vw;
     cursor: pointer;
     font-size: 11px;
@@ -10,11 +11,14 @@
     display: flex;
     text-align: left;
     color: #838787;
-    margin-top: 10px;
     overflow: auto;
-    margin-left: 1vh;
     padding-top: 0.5vh;
     padding-bottom: 1vh;
+    resize: none;
+}
+
+.MessageButton:disabled {
+    background-color: white;
 }
 
 .MessageButton::-webkit-scrollbar {
@@ -24,4 +28,23 @@
 .MessageButton:hover {
     background: #f3f7f7;
 }
+
+.Message {
+    position: relative;
+    border: 1px solid #a2a4a6;
+    border-radius: 20px;
+    width: 23vw;
+    height: 12vw;
+    margin-top: 10px;
+    margin-left: 1vh;
+    z-index: 1;  
+}
+
+.Icon {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin-right: 0.2vw;
+}
+
 
