--- a/frontend/src/styles/messagePanel.css
+++ b/frontend/src/styles/messagePanel.css
@@ -1,4 +1,41 @@
 .Header {
-    width: 100vw;
-    height: 5vw; 
+    width: inherit;
+    height: 6.5vw; 
+    position: relative;
+}
+
+.Header h2 {
+    font-size: 2vw;
+    color: black;
+    position: absolute;
+    left: 8vw;
+}
+
+.Header img {
+    position: relative;
+    float: left;
+    top: 3vw;
+    left: 1.25vw;
+    background-color: #a2a4a6;
+    height: 0.1vw;
+    width: 22.5vw;
+}
+
+.container {
+    position: relative;
+}
+
+.Button {
+    height: 2.5vw;
+    width: 23vw;
+    bottom: 0;
+    position: absolute;
+    left: 1vw;
+    border-radius: 10px;
+    box-shadow: 0 0 10px #ccc;
+    font-size: 1vw;
+}
+
+.Button:hover {
+    background-color: rgb(242, 244, 245);
 }
