--- a/frontend/src/styles/popup.css
+++ b/frontend/src/styles/popup.css
@@ -26,15 +26,16 @@
     width: 60%;
     border-radius: 10px;
     box-shadow: 0 0 10px #ccc;
+    overflow: hidden;
 }
 
-.Close {
+.ClosePopup {
     position: absolute;
     top: 0px;
     float: right;
 }
 
-.Edit {
+.EditPopup {
     position: absolute;
     top: 0px;
     float: right;
@@ -102,9 +103,8 @@
 
 .Work {
     position: absolute;
-    background-color: #101d9200;
     height: 1.5vw;
-    width: 16vw;
+    width: 17vw;
     top: 18.5vw;
     left: 2vw;
 }
@@ -124,18 +124,218 @@
     left: 3.25vw;
     background-color: #bdbdbd;
     height: 0.1vw;
-    width: 12.5vw;
+    width: 100vw;
 }
 
 .WorkContent {
-    background-color: aqua;
-    height: 20vw;
+    height: 40vh;
     width: 26vw;
     position: absolute;
     top: 20.5vw;
     left: 2vw;
 }
 
+.WorkListContainer {
+    position: relative;
+    width: 100%;
+    height: 1.5vw;
+}
 
+.CompanyEmployeeRangeLeft {
+    position: absolute;
+    width: 43%;
+    float: left;
+    color: #646464;
+    font-size: 0.8vw;
+    font-weight: 600;
+}
 
+.CompanyEmployeeRangeRight {
+    width: 57%;
+    float: right;
+    color: #2a2a2a;
+    font-size: 0.8vw;
+    font-weight: 400;
+    word-wrap: break-word;
+    overflow: hidden;
+}
 
+.CompanyIndustryLeft {
+    position: absolute;
+    width: 30%;
+    float: left;
+    color: #646464;
+    font-size: 0.8vw;
+    font-weight: 600;
+}
+
+.CompanyIndustryRight {
+    width: 70%;
+    float: right;
+    color: #2a2a2a;
+    font-size: 0.8vw;
+    font-weight: 400;
+    word-wrap: break-word;
+    overflow: hidden;
+}
+
+.CompanySpecialtiesLeft {
+    position: absolute;
+    width: 34%;
+    float: left;
+    color: #646464;
+    font-size: 0.8vw;
+    font-weight: 600;
+}
+
+.CompanySpecialtiesRight {
+    width: 66%;
+    float: right;
+    color: #2a2a2a;
+    font-size: 0.8vw;
+    font-weight: 400;
+    word-wrap: break-word;
+    overflow: hidden;
+}
+
+.CompanyInPositionLeft {
+    position: absolute;
+    width: 18.5%;
+    float: left;
+    color: #646464;
+    font-size: 0.8vw;
+    font-weight: 600;
+}
+
+.CompanyInPositionRight {
+    width: 81.5%;
+    float: right;
+    color: #2a2a2a;
+    font-size: 0.8vw;
+    font-weight: 400;
+    word-wrap: break-word;
+    overflow: hidden;
+}
+
+.CompanyTypeLeft {
+    position: absolute;
+    width: 24.5%;
+    float: left;
+    color: #646464;
+    font-size: 0.8vw;
+    font-weight: 600;
+}
+
+.CompanyTypeRight {
+    width: 75.5%;
+    float: right;
+    color: #2a2a2a;
+    font-size: 0.8vw;
+    font-weight: 400;
+}
+
+.CompanyProspect {
+    position: absolute;
+    width: 100%;
+    color: #646464;
+    font-size: 0.8vw;
+    font-weight: 600;
+}
+
+.CompanyProspectContent {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    color: #2a2a2a;
+    font-size: 0.7vw;
+    font-weight: 400;
+    word-wrap: break-word;
+    overflow: hidden;
+}
+
+.LargeContainer {
+    position: relative;
+    width: 100%;
+    height: 25%;
+}
+
+.Rating {
+    position: relative;
+    height: 3vw;
+    width: 8vw;
+    left: 18vw;
+    top: 11.3vw;
+}
+
+.Rating h2 {
+    color: rgb(211, 211, 211);
+    font-size: 0.75vw;
+    font-weight: 650;
+}
+
+.OpenToWork {
+    position: relative;
+    height: 3vw;
+    width: 8vw;
+    left: 18vw;
+    top: 11.5vw;
+}
+
+.OpenToWork h2{
+    color: rgb(211, 211, 211);
+    font-size: 0.75vw;
+    font-weight: 650;
+}
+
+.Status {
+    position: relative;
+    height: 3vw;
+    width: 8vw;
+    left: 28vw;
+    top: 5.3vw;
+}
+
+.Status h2{
+    color: rgb(211, 211, 211);
+    font-size: 0.75vw;
+    font-weight: 650;
+}
+
+.StatusChip {
+    height: 1.5vw;
+    width: 6vw;
+    background-color: #ffb55a;
+    border-radius: 5px;
+    margin-top: 4px;
+    font-size: 0.7vw;
+    font-weight: 400;
+    text-align: center;
+    padding-top: 0.25vw;
+    color: black;
+}
+
+.History {
+    height: 1.5vw;
+    width: 17vw;
+    position: absolute;
+    top: 18.5vw;
+    left: 28vw;
+}
+
+.History h2 {
+    position: absolute;
+    font-size: 0.9vw;
+    font-weight: 700;
+    color: #bdbdbd;
+    float: left;
+}
+
+.History img {
+    position: relative;
+    float: left;
+    top: 0.9vw;
+    left: 3.25vw;
+    background-color: #bdbdbd;
+    height: 0.1vw;
+    width: 100vw;
+}
