--- a/frontend/src/styles/savedSearch.css
+++ b/frontend/src/styles/savedSearch.css
@@ -6,11 +6,11 @@
     height: 5vw;
     margin-top: 10px;
     margin-left: 2vh;
-    z-index: 1;  
+    z-index: 1; 
 }
 
 .DeleteSearch {
     position: absolute;
-    right: 0;
-    top: 0;
+    left: 10vw;
+    top: 0vw;
 }
