--- a/frontend/src/styles/popup.css
+++ b/frontend/src/styles/popup.css
@@ -297,9 +297,10 @@
 .Status {
     position: relative;
     height: 3vw;
-    width: 8vw;
+    width: 8.5vw;
     left: 28vw;
     top: 5.3vw;
+    background-color: aqua;
 }
 
 .Status h2{
@@ -309,15 +310,15 @@
 }
 
 .StatusChip {
-    height: 1.5vw;
-    width: 6vw;
-    background-color: #ffb55a;
+    height: 1.6vw;
+    width: 7vw;
+    background-color: rgb(116, 190, 255);
     border-radius: 5px;
     margin-top: 4px;
     font-size: 0.7vw;
     font-weight: 400;
     text-align: center;
-    padding-top: 0.25vw;
+    padding-top: 0.3vw;
     color: black;
 }
 
