--- a/frontend/src/styles/messagePanel.css
+++ b/frontend/src/styles/messagePanel.css
@@ -39,3 +39,24 @@
 .Button:hover {
     background-color: rgb(242, 244, 245);
 }
+
+.EmptyMessage {
+    position: relative;
+    z-index: 2;
+    border: 1px solid #a2a4a6;
+    border-radius: 20px;
+    width: 23vw;
+    height: 10vw;
+    cursor: pointer;
+    font-size: 11px;
+    padding: 0px 10px;
+    display: flex;
+    text-align: left;
+    color: #838787;
+    overflow: auto;
+    padding-top: 0.5vh;
+    padding-bottom: 1vh;
+    resize: none;
+    margin-top: 10px;
+    margin-left: 2vh;
+}
